tests/valid/trait/method_call_explicit_ufcs_local_inferred_pure_receiver.facet
trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x = 1;
  (<unrestricted isize as Runner>::run x)
}
